--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 </head>
 <body>
     <header>
-        <div id="logo">
-            <img src="imagens/logo.png" alt="Logo">
-            <p>Beleza e Saúde em Equilíbrio</p>
-        </div>
         <nav>
             <ul class="menu-principal">
                 <li><a href="#">Agende um Procedimento</a></li>
@@ -24,27 +20,27 @@
         <section class="perfil">
             <img src="imagens/perfil-imagem1.jpeg" alt="Imagem de perfil">
             <aside>
-                Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos <strong>cuidados com o recém-nascido</strong> e, também, realiza o <strong>furo humanizado nas orelhinhas desses bebês</strong>. 
-                Não o bastante, faz em adultos, o Procedimento Estético Invasivo para Microvaso -<strong>PEIM</strong>.
+                Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas tanto para orientar os pais quanto aos <strong>cuidados com o recém-nascido</strong>, bem como, realiza o <strong>furo humanizado nas orelhinhas desses bebês</strong>. 
+                Não o bastante, também, disponibiliza para adultos, o Procedimento Estético Invasivo para Microvaso-<strong>PEIM</strong> e <strong>aplicação de Piercing</strong>.
             </aside>
         </section>
         <section class="serviços">
             <h1>Saiba um pouco mais sobre os serviços disponíveis</h1>
             <div class="serviços-disponíveis">
                 <div id="furo-humanizado">
-                    <h2>Furo humanizado</h2>                   
                     <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado">
+                    <h2>Furo humanizado</h2> 
                     <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
                 </div>
                 <div id="cuidados-bebe">
-                    <h2>Cuidados com o recém nascido</h2>
                     <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
+                    <h2>Cuidados com o recém nascido</h2>
                     <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
                 </div>
                 <div id="peim">
-                    <h2>PEIM</h2>
                     <img src="imagens/peim-imagem2.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-                    <p>O Procedimento Estético Invasivo para Microvasos é uma técnica que tem por finalidade eliminar os microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores, tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida."</p>   
+                    <h2>PEIM</h2>
+                    <p>O Procedimento Estético Invasivo para Microvasos é uma técnica que tem por finalidade eliminar os microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores, tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida.</p>   
                 </div>
             </div>
         </section>
