--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="imagens/perfil-imagem1.jpeg" alt="Imagem de perfil">
             <aside>
                 Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas tanto para orientar os pais quanto aos <strong>cuidados com o recém-nascido</strong>, bem como, realiza o <strong>furo humanizado nas orelhinhas desses bebês</strong>. 
-                Não o bastante, também, disponibiliza para adultos, o Procedimento Estético Invasivo para Microvaso-<strong>PEIM</strong> e <strong>aplicação de Piercing</strong>.
+                Não o bastante, também, disponibiliza para adultos, o Procedimento Estético Invasivo para Microvaso-<strong>PEIM</strong> e a <strong>aplicação de Piercing</strong>.
             </aside>
         </section>
         <section class="serviços">
@@ -30,37 +30,25 @@
                 <div id="furo-humanizado">
                     <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado">
                     <h2>Furo humanizado</h2> 
-                    <p>Trata-se de um método no qual se combina o uso de pomada anestésica seguido da aplicação de técnicas de acupuntura que permite realizar o furo no ponto da orelha menos enervado.</p>
+                    <p>Trata-se de um método que combina a aplicação de pomada anestésica com técnicas de acupuntura, assim, evita-se o maximo de desconforto ao bebê.</p>
                 </div>
                 <div id="cuidados-bebe">
                     <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
                     <h2>Cuidados com o recém nascido</h2>
-                    <p>Para manter o bebê saudável deve-se atentar quanto aos cuidados básico quer seja o banho, aleitamento e a sua higienização. Além disso, ressalta-se a importância de se cumprir com o ciclo vacinal. </p> 
+                    <p>Para manter o bebê saudável deve-se estar atento a cuidados como o seu banho, o momento do aleitamento, a sua higienização e, também, o cumprimento do ciclo vacinal.</p> 
                 </div>
                 <div id="peim">
                     <img src="imagens/peim-imagem2.jpg" alt="Procedimento Estético Invasivo para Microvasos">
                     <h2>PEIM</h2>
-                    <p>O Procedimento Estético Invasivo para Microvasos é uma técnica que tem por finalidade eliminar os microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores, tais como predisposição genética e gestação, com isso, melhora-se o aspecto da região acometida.</p>   
+                    <p>O Procedimento Estético Invasivo para Microvasos tem por finalidade eliminar os microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores.</p>   
                 </div>
             </div>
         </section>
-        <!--<section class="noticias">
-            <article>
-                <h2>Notícias sobre estética</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A facilis expedita amet nam! Aperiam ullam architecto ipsa neque error? Excepturi eveniet rerum a, corrupti voluptate sed quae itaque nam repellat?</p>
-            </article>
-        </section>
-        <section class="videoorientacoes">
-            <picture>
-
-            </picture>            
-        </section>-->
     </main>
-    <!--<footer>
+    <footer>
         <address>
-            <p>Criação e Desenvolvimento: <a href="mailto:lucianomarcos156@hotmail.com">Luciano Marcos</a>2022</p>
+            <p>Criação e Desenvolvimento: <a href="mailto:lucianomarcos156@hotmail.com">Luciano Marcos</a> 2022</p>
         </address> 
-    </footer>-->
-
+    </footer>
 </body>
 </html>
