--- a/index.html
+++ b/index.html
@@ -25,22 +25,19 @@
             </aside>
         </section>
         <section class="serviços">
-            <h1>Saiba um pouco mais sobre os serviços disponíveis</h1>
+            <h3>Saiba um pouco mais sobre os serviços disponíveis</h3>
             <div class="serviços-disponíveis">
                 <div id="furo-humanizado">
-                    <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado">
-                    <h2>Furo humanizado</h2> 
-                    <p>Trata-se de um método que combina a aplicação de pomada anestésica com técnicas de acupuntura, assim, evita-se o maximo de desconforto ao bebê.</p>
+                    <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado"> 
+                    <p><strong>Furo Humanizado</strong><br> Trata-se de um método que combina a aplicação de pomada anestésica com técnicas de acupuntura, assim, evita-se o maximo de desconforto ao bebê.</p>
                 </div>
                 <div id="cuidados-bebe">
                     <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
-                    <h2>Cuidados com o recém nascido</h2>
-                    <p>Para manter o bebê saudável deve-se estar atento a cuidados como o seu banho, o momento do aleitamento, a sua higienização e, também, o cumprimento do ciclo vacinal.</p> 
+                    <p><strong>Cuidados com o recém nascido</strong><br> Para manter o bebê saudável deve-se estar atento a cuidados como o seu banho, o momento do aleitamento, a sua higienização e, também, o cumprimento do ciclo vacinal.</p> 
                 </div>
                 <div id="peim">
                     <img src="imagens/peim-imagem2.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-                    <h2>PEIM</h2>
-                    <p>O Procedimento Estético Invasivo para Microvasos tem por finalidade eliminar os microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores.</p>   
+                    <p><strong>PEIM</strong><br> O Procedimento Estético Invasivo para Microvasos tem por finalidade eliminar os microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores.</p>   
                 </div>
             </div>
         </section>
