--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Enfermerira Esteticista</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Raleway:wght@300&display=swap" rel="stylesheet">     
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Dancing+Script:wght@600&family=Montserrat:wght@500&family=Open+Sans:wght@500&family=Raleway:wght@300;400&family=Source+Sans+Pro&display=swap" rel="stylesheet">  
 </head>
 <body>
     <header>
@@ -24,23 +24,21 @@
                 Não o bastante, também, disponibiliza para adultos, o Procedimento Estético Invasivo para Microvaso-<strong>PEIM</strong> e a <strong>aplicação de Piercing</strong>.
             </aside>
         </section>
-        <section class="serviços">
-            <h3>Saiba um pouco mais sobre os serviços disponíveis</h3>
-            <div class="serviços-disponíveis">
-                <div id="furo-humanizado">
-                    <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado"> 
-                    <p><strong>Furo Humanizado</strong><br> Trata-se de um método que combina a aplicação de pomada anestésica com técnicas de acupuntura, assim, evita-se o maximo de desconforto ao bebê.</p>
-                </div>
-                <div id="cuidados-bebe">
-                    <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
-                    <p><strong>Cuidados com o recém nascido</strong><br> Para manter o bebê saudável deve-se estar atento a cuidados como o seu banho, o momento do aleitamento, a sua higienização e, também, o cumprimento do ciclo vacinal.</p> 
-                </div>
-                <div id="peim">
-                    <img src="imagens/peim-imagem2.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-                    <p><strong>PEIM</strong><br> O Procedimento Estético Invasivo para Microvasos tem por finalidade eliminar os microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores.</p>   
-                </div>
+        <h3>Saiba um pouco mais sobre os serviços disponíveis</h3>
+        <section class="serviços-disponíveis">
+            <div class="furo-humanizado">
+                <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado"> 
+                <p><strong>Furo Humanizado</strong><br> Trata-se de um método que evita o máximo possível de desconforto no momento de se realizar o furo em orelhas. Para isso, combina-se a aplicação de pomada anestésica com técnicas de acupuntura.</p>
             </div>
-        </section>
+            <div class="cuidados-bebe">
+                <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
+                <p><strong>Cuidados com o recém nascido</strong><br> Para manter o bebê saudável deve-se estar atento a cuidados como o seu banho, o momento do aleitamento, a sua higienização e, também, o cumprimento do ciclo vacinal.</p> 
+            </div>
+            <div class="peim">
+                <img src="imagens/peim-imagem2.jpg" alt="Procedimento Estético Invasivo para Microvasos">
+                <p><strong>PEIM</strong><br> O Procedimento Estético Invasivo para Microvasos tem por finalidade eliminar microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores.</p>   
+            </div>
+        </section>   
     </main>
     <footer>
         <address>
