--- a/index.html
+++ b/index.html
@@ -15,16 +15,23 @@
                 <li><a href="#">Faça um orçamento</a></li>
             </ul>   
         </nav>
+        <!--<div class="ícone-topo-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>-->
     </header>
     <main>
         <section class="perfil">
-            <img src="imagens/perfil-imagem1.jpeg" alt="Imagem de perfil">
+            <figure>
+                <img src="imagens/perfil-imagem1.jpeg" alt="Imagem de perfil">
+            </figure>
             <aside>
                 Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas tanto para orientar os pais quanto aos <strong>cuidados com o recém-nascido</strong>, bem como, realiza o <strong>furo humanizado nas orelhinhas desses bebês</strong>. 
                 Não o bastante, também, disponibiliza para adultos, o Procedimento Estético Invasivo para Microvaso-<strong>PEIM</strong> e a <strong>aplicação de Piercing</strong>.
             </aside>
         </section>
-        <h3>Saiba um pouco mais sobre os serviços disponíveis</h3>
+        <h2>Saiba um pouco mais sobre os serviços disponíveis</h2>
         <section class="serviços-disponíveis">
             <div class="furo-humanizado">
                 <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado"> 
