--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <main>
         <section class="perfil">
             <figure>
-                <img src="imagens/perfil-imagem1.jpeg" alt="Imagem de perfil">
-            </figure>
+                <img src="imagens/perfil-imagem.jpeg" alt="Imagem de perfil">
+            </figure>  
             <aside>
                 Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas tanto para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
-                Não o bastante, também, disponibiliza para adultos, o Procedimento Estético Invasivo para Microvaso-PEIM e a aplicação de Piercing.
+                Não o bastante, também, disponibiliza para adultos o Procedimento Estético Invasivo para Microvaso-PEIM e a aplicação de Piercing.
             </aside>
         </section>
         <h2>Saiba um pouco mais sobre os serviços disponíveis</h2>
