--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header>
         <nav>
             <ul class="menu-principal">
-                <li><a href="#">Agende um Procedimento</a></li>
-                <li><a href="#">Faça um orçamento</a></li>
+                <li><a href="#"><img src="imagens/zap.png"> WhatsApp</a></li>
+                <li><a href="#"><img src="imagens/Instagram.png">Instagram</a></li>
+                <li><a href="mailto:lucianomarcos156@hotmail.com"><img src="imagens/email.png">E-mail</a></li>
             </ul>   
         </nav>
         <!--<div class="ícone-topo-menu">
@@ -48,9 +49,7 @@
         </section>   
     </main>
     <footer>
-        <address>
-            <p>Criação e Desenvolvimento: <a href="mailto:lucianomarcos156@hotmail.com">Luciano Marcos</a> 2022</p>
-        </address> 
+         
     </footer>
 </body>
 </html>
