--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado"> 
                 <p><strong>Furo Humanizado</strong><br> Trata-se de um método que evita o máximo possível de desconforto no momento de se realizar o furo em orelhas. Para isso, combina-se a aplicação de pomada anestésica com técnicas de acupuntura.</p>
             </div>
+            <div class="aplicação-piercing">
+                <img src="#" alt="Piercing">
+                <p><strong>Aplicação de Piercing</strong><br> Utiliza-se das mesmas técnicas realizada no método do Furo Humanizado. O diferencial está na condição do paciente poder opinar pelo local do corpo a ser aplicado o Piercing</p>
+            </div>
             <div class="cuidados-bebe">
                 <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
                 <p><strong>Cuidados com o recém nascido</strong><br> Para manter o bebê saudável deve-se estar atento a cuidados como o seu banho, o momento do aleitamento, a sua higienização e, também, o cumprimento do ciclo vacinal.</p> 
