--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <header>
         <nav>
             <ul class="menu-principal">
-                <li><a href="#"><img src="imagens/zap.png"> WhatsApp</a></li>
-                <li><a href="#"><img src="imagens/Instagram.png">Instagram</a></li>
-                <li><a href="mailto:lucianomarcos156@hotmail.com"><img src="imagens/email.png">E-mail</a></li>
+                <li><a href="#"><img src="imagens/zap.png"></a></li>
+                <p>WhatsApp</p>
+                <li><a href="#"><img src="imagens/Instagram.png"></a></li>
+                <p>Instagram</p>
+                <li><a href="mailto:lucianomarcos156@hotmail.com"><img src="imagens/email.png"></a></li>
+                <p>E-mail</p>
             </ul>   
         </nav>
         <!--<div class="ícone-topo-menu">
@@ -24,9 +27,10 @@
     </header>
     <main>
         <section class="perfil">
-            <figure>
-                <img src="imagens/perfil-imagem.jpeg" alt="Imagem de perfil">
-            </figure>  
+            <picture>
+                <source media="(max-width: 600px)" srcset="perfil-imagem-p">
+                <img src="imagens/perfil-imagem.jpeg" alt="Imagem de perfil">  
+            </picture>
             <aside>
                 Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas tanto para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
                 Não o bastante, também, disponibiliza para adultos o Procedimento Estético Invasivo para Microvaso-PEIM e a aplicação de Piercing.
@@ -35,25 +39,25 @@
         <h2>Saiba um pouco mais sobre os serviços disponíveis</h2>
         <section class="serviços-disponíveis">
             <div class="furo-humanizado">
-                <img src="imagens/furo-humanizado-imagem2.jpg" alt="Furo Humanizado"> 
-                <p><strong>Furo Humanizado</strong><br> Trata-se de um método que evita o máximo possível de desconforto no momento de se realizar o furo em orelhas. Para isso, combina-se a aplicação de pomada anestésica com técnicas de acupuntura.</p>
+                <img src="imagens/furo-humanizado-img1.jpeg" alt="Furo Humanizado"> 
+                <p><strong>Furo Humanizado</strong><br> Utiliza-se de pomada anestésica e técnicas de acunputura para evitar o máximo possível de desconforto no momento de se realizar o furo.</p>
             </div>
             <div class="aplicação-piercing">
-                <img src="#" alt="Piercing">
-                <p><strong>Aplicação de Piercing</strong><br> Utiliza-se das mesmas técnicas realizada no método do Furo Humanizado. O diferencial está na condição do paciente poder opinar pelo local do corpo a ser aplicado o Piercing</p>
+                <img src="imagens/aplicação-piercing2.jpeg" alt="Piercing">
+                <p><strong>Aplicação de Piercing</strong><br> A possibilidade de dor no momento da perfuração está relacionada ao fato da área ser ou não bastante irrigada por vasos sanquíneos.</p>
             </div>
             <div class="cuidados-bebe">
                 <img src="imagens/cuidados-bebe-imagem2.jpg" alt="Cuidados com o bebê">
-                <p><strong>Cuidados com o recém nascido</strong><br> Para manter o bebê saudável deve-se estar atento a cuidados como o seu banho, o momento do aleitamento, a sua higienização e, também, o cumprimento do ciclo vacinal.</p> 
+                <p><strong>Cuidados com o bebê</strong><br>Orientações quanto ao aleitamento, higienização e o cumprimento do cilo vacinal são fundamentais para mater o beber saudável.</p> 
             </div>
             <div class="peim">
                 <img src="imagens/peim-imagem2.jpg" alt="Procedimento Estético Invasivo para Microvasos">
-                <p><strong>PEIM</strong><br> O Procedimento Estético Invasivo para Microvasos tem por finalidade eliminar microvasos decorrentes de fatores que interferem a circulação sanguínea nos membros inferiores.</p>   
+                <p><strong>PEIM</strong><br> O Procedimento Estético Invasivo para Microvasos tem como finalidade a eliminação de microvasos localizados nos membros inferiores (Pernas).</p>   
             </div>
         </section>   
     </main>
-    <footer>
+    <!--<footer>
          
-    </footer>
+    </footer>-->
 </body>
 </html>
