--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="menu-principal">
-                <li><a href="#"><img src="imagens/zap.png"></a></li>
-                <p>WhatsApp</p>
-                <li><a href="#"><img src="imagens/Instagram.png"></a></li>
-                <p>Instagram</p>
-                <li><a href="mailto:lucianomarcos156@hotmail.com"><img src="imagens/email.png"></a></li>
-                <p>E-mail</p>
-            </ul>   
-        </nav>
+        <nav class="menu">
+            <ul>
+                <li><a href="#">Agende seu atendimento</a></li>
+            </ul> 
+            <div class="contatos">
+                <a href="#"><img src="imagens/zap.png"></a>
+                <a href="#"><img src="imagens/Instagram.png"></a>
+                <a href="mailto:lucianomarcos156@hotmail.com"><img src="imagens/email.png"></a>
+            </div>  
+        </nav>       
         <!--<div class="ícone-topo-menu">
             <span></span>
             <span></span>
@@ -32,7 +32,7 @@
                 <img src="imagens/perfil-imagem.jpeg" alt="Imagem de perfil">  
             </picture>
             <aside>
-                Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank">neonatal</a>, utiliza-se de suas habilidades técnicas tanto para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
+                Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank"><strong>neonatal</strong></a>, utiliza-se de suas habilidades técnicas tanto para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
                 Não o bastante, também, disponibiliza para adultos o Procedimento Estético Invasivo para Microvaso-PEIM e a aplicação de Piercing.
             </aside>
         </section>
@@ -56,8 +56,8 @@
             </div>
         </section>   
     </main>
-    <!--<footer>
-         
-    </footer>-->
+    <footer>
+         Criação e Desenvolvimento: Luciano Marcos &copy; 2022
+    </footer>
 </body>
 </html>
