--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header>
         <nav class="menu">
-            <a href="#">Agende seu atendimento</a>
             <ul class="contatos">
-                <p>Canais para contato</p><img src="imagens/dedo-indicador.png">
-                <li><a href="#"><img src="imagens/zap.png"></a></li>
-                <li><a href="#"><img src="imagens/Instagram.png"></a></li>
-                <li><a href="mailto:lucianomarcos156@hotmail.com"><img src="imagens/email.png"></a></li>
+                <p>Canais para contato:</p>
+                <li><a href="#"><picture class="canais-contato"><img src="imagens/zap.png"></picture></a></li>
+                <li><a href="#"><picture class="canais-contato"><img src="imagens/Instagram.png"></picture></a></li>
+                <li><a href="mailto:lucianomarcos156@hotmail.com"><picture class="canais-contato"><img src="imagens/email.png"></picture></a></li>
             </ul>  
+            <a class="agenda" href="#">Agende seu atendimento</a>
         </nav>       
         <!--<div class="ícone-topo-menu">
             <span></span>
