--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <header>
         <nav class="menu">
             <ul class="contatos">
-                <p>Canais para contato:</p>
-                <li><a href="#"><picture class="canais-contato"><img src="imagens/zap.png"></picture></a></li>
+                <li><a href="#"><picture class="canais-contato"><img src="imagens/zap.png"></picture></a></li><span>WhatsApp</span>
+                
                 <li><a href="#"><picture class="canais-contato"><img src="imagens/Instagram.png"></picture></a></li>
+                <span>Instagram</span>
                 <li><a href="mailto:lucianomarcos156@hotmail.com"><picture class="canais-contato"><img src="imagens/email.png"></picture></a></li>
+                <span>E-mail</span>
             </ul>  
             <a class="agenda" href="#">Agende seu atendimento</a>
         </nav>       
