--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </picture>
             <aside>
                 Profissional da área da saúde há 21 anos, Andrea Andrade, Enfermeira Esteticista, atuante no ambiente <a href="https://pt.wikipedia.org/wiki/Neonatologia" target="_blank"><strong>neonatal</strong></a>, utiliza-se de suas habilidades técnicas para orientar os pais quanto aos cuidados com o recém-nascido, bem como, realiza o furo humanizado nas orelhinhas desses bebês. 
-                Não o bastante, também, disponibiliza para adultos o Procedimento Estético Invasivo para Microvaso-PEIM e a aplicação de Piercing.
+                Não o bastante, também, disponibiliza para adultos, tanto o Procedimento Estético Invasivo para Microvaso-PEIM quanto a aplicação de Piercing.
             </aside>
         </section>
         <h2>Saiba um pouco mais sobre os serviços disponíveis</h2>
